<resources>
    <string name="app_name">iFarma</string>

    <string name="register_msg">Cadastre-se ou entre para facilitar a sua compra</string>
    <string name="sign_register_out">Desconectar</string>
    <string name="sign_register_in">Entrar ou Cadastrar</string>
    <string name="me_toolbar">Meu Perfil</string>
    <string name="sign_in">Registrar</string>
    <string name="log_in">Entrar</string>
    <string name="register_product_toolbar">Novo Produto</string>
    <string name="edit_perfil">Editar Perfil</string>
    <string name="pharm_toolbar">Minha Farmácia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="info_pharma_toolbar">Editar Perfil</string>
    <string name="search_medicines">Procurar medicamentos</string>
    <string name="empty_car">O seu carrinho está vazio</string>
    <string name="cart">Carrinho</string>
    <string name="cancel_cart">Cancelar</string>
    <string name="finalize_cart">Finalizar</string>
    <string name="delivery_text">Entrega:</string>
    <string name="total_text">Total:</string>
    <string name="buy_finish">Finalizar Compra</string>

    <string name="info_product_toolbar">Editar Produto</string>

</resources>
