<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"/>

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/finalize_cart"
            android:id="@+id/finalize_cart"
            android:background="@drawable/rounded_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_cart"
            android:id="@+id/cancel_cart"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:id="@+id/scroll_view"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/toolbar"
        android:layout_above="@id/relative_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_listview">

            </ListView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/delivery_text"
                    android:textSize="16sp"
                    android:id="@+id/tv_delivery"
                    android:layout_alignBottom="@+id/total_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="{{ Price }}"
                    android:textSize="16sp"
                    android:id="@+id/delivery_price"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/total_text"
                    android:textSize="16sp"
                    android:layout_below="@id/tv_delivery"
                    android:id="@+id/tv_total"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="{{ Price }}"
                    android:textSize="16sp"
                    android:id="@+id/total_price"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>